# utopia

./: .gitignore  .npmignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python/instrumenter/: instrument.py
python/utopia_runtime/: __init__.py  client.py  decorator.py  fix_log.py  healer.py  probe.py
scripts/: publish-npm.sh  publish-pypi.sh
src/: types.ts
src/cli/: index.ts
src/cli/commands/: audit.ts  codex.ts  context.ts  destruct.ts  easter-eggs.ts  heal.ts  init.ts  instrument.ts  mcp.ts  serve.ts  status.ts  validate.ts
src/cli/utils/: config.ts
src/graph/: index.ts
src/instrumenter/: javascript.ts
src/mcp/: index.ts
src/runtime/js/: index.ts  package.json  tsconfig.json
src/server/: index.ts
src/server/db/: index.ts  schema.ts
src/server/middleware/: auth.ts
src/server/routes/: admin.ts  graph.ts  probes.ts  security.ts
src/utopia-mode/: index.ts
