[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utopia-runtime"
version = "0.1.0"
description = "Zero-impact production probe runtime for Utopia — gives AI coding agents real-time visibility into how code runs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["utopia", "probes", "observability", "production-context", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/paulvann/utopia"
Repository = "https://github.com/paulvann/utopia"

[tool.setuptools.packages.find]
include = ["utopia_runtime*"]
